syntax = "proto3";

package calculator;

option go_package = "github.com/rytsh/grpc-tutorial/calculator/proto";

message PrimeRequest {
  int64 number = 1;
}

message PrimeResponse {
  int64 divide = 1;
}
